# Hoisa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/github-issue-workflow/: SKILL.md
.agents/skills/implementation-pr-workflow/: SKILL.md
.agents/skills/plan-workflow/: SKILL.md
.agents/skills/review-workflow/: SKILL.md
.agents/skills/roadmap-workflow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent_task.yml  spike.yml
.github/workflows/: ci.yml
deploy/local/: .env.example  README.md  codex-poc.Dockerfile  docker-compose.yml
deploy/local/mongo-init/: README.md
docs/: current-state-and-useful-roadmap.md  github-workflow.md  vision.md
docs/agent-plans/: 10-task-add-local-mongodb-development-infrastructur.md  11-task-implement-mongodb-persistence-adapter.md  2-architecture-persistence-direction.md  31-task-turn-the-docker-codex-poc-into-the-first-pr.md  33-task-demonstrate-the-first-manual-hoisa-assisted.md  5-task-create-hoisa-package-skeleton-and-architect.md  6-task-define-core-workflow-gate-run-evidence-and.md  7-task-extract-workflow-transition-and-selection-s.md  8-task-extract-issue-quality-risk-and-trust-evalua.md  9-task-add-persistence-ports-and-in-memory-adapter.md  README.md
docs/architecture/: antdocs-and-development-flow.md
docs/changes/: 2026-06-23-local-db-github-bootstrap.md
docs/examples/: github-app-permissions.md  github-bootstrap-manifest.example.json
docs/research/: human-agent-project-orchestration.md
flows/: README.md
flows/coding_feature/: flow.json
flows/research_report/: flow.json
scripts/: poc_docker_agent_run.py
scripts/github/: agent_workflow.py  bootstrap_connection.py  sync_issues.py
src/hoisa/: __init__.py
src/hoisa/adapters/: __init__.py
src/hoisa/app/: __init__.py
src/hoisa/cli/: __init__.py
src/hoisa/domain/: __init__.py  actors.py  credentials.py  directives.py  events.py  evidence.py  flow_definitions.py  gates.py  issue_quality.py  models.py  privacy.py  provenance.py  runs.py  sources.py  target_repos.py  (+8 more)
tests/contract/: __init__.py
(+77 files in other folders)
